--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,10 +48,11 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\EndScript.cs" />
-     <Compile Include="Assets\Scripts\FontColorSwitch.cs" />
      <Compile Include="Assets\Scripts\GUIScript.cs" />
-     <Compile Include="Assets\Scripts\MakeInvisible.cs" />
+     <Compile Include="Assets\Scripts\HighScore.cs" />
+     <Compile Include="Assets\Scripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\TextColourChange.cs" />
      <Compile Include="Assets\Scripts\Timer.cs" />
      <Compile Include="Assets\Scripts\Winbox.cs" />
      <Compile Include="Assets\Scripts\parallax.cs" />
